--- a/web/app/themes/sage/resources/assets/styles/components/_comments.scss
+++ b/web/app/themes/sage/resources/assets/styles/components/_comments.scss
@@ -1,5 +1,5 @@
 .comment-list {
-  @apply list-reset;
+  @extend .list-unstyled;
 }
 
 .comment-list ol {
@@ -7,24 +7,17 @@
 }
 
 .comment-form p {
-  @apply mb-4;
+  @extend .form-group;
 }
 
 .comment-form input[type="text"],
 .comment-form input[type="email"],
 .comment-form input[type="url"],
 .comment-form textarea {
-  @apply block appearance-none w-full py-1 px-2 mb-1 text-base leading-normal bg-white text-grey-darker border border-grey rounded;
-
-  &:focus {
-    @apply shadow-outline;
-  }
+  @extend .form-control;
 }
 
 .comment-form input[type="submit"] {
-  @apply btn bg-grey-dark;
-
-  &:hover {
-    @apply bg-grey-darker;
-  }
+  @extend .btn;
+  @extend .btn-secondary;
 }
