--- a/web/app/themes/sage/resources/assets/styles/components/_forms.scss
+++ b/web/app/themes/sage/resources/assets/styles/components/_forms.scss
@@ -1,22 +1,19 @@
 /** Search form */
 .search-form {
-  @apply flex items-center;
+  @extend .form-inline;
 }
 
 .search-form label {
-  @apply mb-4;
+  @extend .form-group;
 
   font-weight: normal;
 }
 
 .search-form .search-field {
-  @apply block appearance-none w-full py-1 px-2 mb-1 text-base leading-normal bg-white text-grey-darker border border-grey rounded;
+  @extend .form-control;
 }
 
 .search-form .search-submit {
-  @apply inline-block align-middle text-center select-none border font-normal whitespace-no-wrap py-2 px-4 rounded text-base leading-normal no-underline text-grey-lightest bg-grey;
-
-  &:hover {
-    @apply bg-grey-light;
-  }
+  @extend .btn;
+  @extend .btn-secondary;
 }
